# High-Level-Cow-Horse

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CLIENT-AUTOMATION-FLOWS.md  Caddyfile  DEPLOY.md  Dockerfile  Dockerfile.audit-worker  MACOS_SERVER.md  MIGRATION-PLAN.md  NEW_WORKER.md  README.md  SETUP.md  TODO.md  alembic.ini  docker-compose.yml  dump.rdb  openclaw.json  package-lock.json  plan-email-quality.md  plan-kanban-board.md  plan-pipeline-robustness.md  plan.md  pyproject.toml  railway.toml  run-audit-worker.py  setup.sh  system-prompt.md  target.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: 20260406_imessage_channel.py  20260407_unique_external_message_id.py
business/: model.md
clawdbot/: Dockerfile  index.js  package-lock.json  package.json
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/components/: providers.tsx
dashboard/lib/: api.ts  constants.ts  search-context.tsx  toolbar-context.tsx  types.ts  utils.ts
deploy/ec2/: .env.example  Dockerfile  docker-compose.yml  nginx.conf  openclaw.service  setup.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: healthcheck.py  init-db.py  setup-ec2.sh
skills/ceo/: handler.py  skill.yaml
skills/client_comms/: handler.py  skill.yaml
skills/designer/: handler.py  skill.yaml
skills/engineer/: handler.py  skill.yaml
skills/inbound/: handler.py  skill.yaml
skills/learning/: handler.py  skill.yaml
skills/outbound/: handler.py  skill.yaml
skills/project_manager/: handler.py  skill.yaml
skills/qa/: handler.py  skill.yaml
skills/research/: handler.py  skill.yaml
skills/reviewer/: handler.py  skill.yaml
src/imessage-agent/: .env.example  ecosystem.config.cjs  package-lock.json  package.json
src/openclaw/: autoscaler.py  config.py  main.py
templates/competitors/: agent.md  reference.md
templates/lead-gen/: reference.md
tests/: conftest.py  test_lead_gen.py
website/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+228 files in other folders)
