[project]
name = "openclaw-clarmi"
version = "0.2.0"
description = "AI-powered digital design agency — MCP tools for OpenClaw"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "playwright>=1.49.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "structlog>=24.4.0",
    "python-slugify>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
